# study_psw

./: .gitignore  pyproject.toml
apostilas/: views.py
apostilas/migrations/: 0001_initial.py
apostilas/templates/: adicionar_aplostila.html  adicionar_apostilas.html  apostila.html
flashcard/: admin.py  models.py  views.py
flashcard/migrations/: 0001_initial.py  0002_flashcarddesafio_desafio.py  0003_alter_desafio_quantidade_perguntas.py
flashcard/templates/: desafio.html  iniciar_desafio.html  novo_flashcard.html  relatorio.html
study_async/: settings.py
templates/static/flashcard/js/: flashcard.js
usuarios/: views.py
usuarios/templates/: cadastro.html
