[tool.poetry]
name = "study-psw"
version = "0.1.0"
description = ""
authors = ["LucasPires50 <luc_50@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
pillow = "^10.2.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
